# tidy-ts

./: .gitignore  .mcp.json  ARROW_IMPLEMENTATION_GAMEPLAN.md  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VALIDATION.md  benchmark_posthoc.ts  benchmark_posthoc_scaling.ts  browser_usage.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  ci.md  combine_proposal_files.py  debug_coefficients.ts  debug_r_formula.ts  debug_rust_formula.ts  demo.R  deno.jsonc  fix_modules.py  glmm_gee.R  glmm_gee_summary.md  import_map.json  libcontrasts_tests.rlib  package.json  rust-ts-wasm-structure.md  test-date-debug.xlsx  test-glm-wasm.ts  test-newline.csv  test_beta.rs  test_formula_parsing.js  test_gee.json  (+13 more)
.github/: Dockerfile
compression-stream-main/: README.md  facade.js  index.js  package.json  polyfill.js
design/: 00-overview.md  01-columnar-storage.md  02-copy-on-write.md  03-view-system.md  04-proxy-system.md  05-type-system.md  06-grouping-system.md  07-verb-system.md  08-async-system.md  09-telemetry.md  10-memory-management.md  11-io-system.md  12-wasm-integration.md  13-printing-system.md  (+7 more)
examples/benchmarksV2/: README.md  analyze.ts  minimal_python_test.py  pyproject.toml  r.R  status-20250910.md  tidy-ts-only.ts  typescript.ts
examples/benchmarksV2/results/: benchmark_ratios.csv
src/: lib.rs  (+1 more)
src/process/: README.md  analyze-emergency-room-flexible.py  analyze-emergency-room.py  analyze-portal-messages-flexible.py  deno.jsonc  ocel-pm4py.py  ocel-simple.py  ocpm.md  pm4py-docs.md  portal-messages-model.md  pyproject.toml  readXES.ts  test-emergency-room.py  test-pm4py.py  types.ts  xes_log.ts
src/process/analysis/: algorithms.ts
src/process/analysis/performance/: activity-stats.ts  bottleneck-detection.ts  dfg-creation.ts  format-duration.ts  start-end-activities.ts  variant-analysis.ts
src/process/analysis/process-discovery/: dfg.ts  inductive-miner.ts  split-miner.ts
src/process/fixtures/: emergency_room.csv  example.jsonocel  mimicel_100patients.csv  mimicel_100patients.xes  mimicel_sample.xes  mimicel_small.csv  ocel.csv  ocel.db  order-process.jsonocel  portal_messages.csv
src/process/tests/: dfg.test.ts  discovery.test.ts  timestamp_ordering.test.ts  variants_ordering.test.ts  xes_evaluation.ts  xes_log.test.ts
src/process/utils/: csv_to_xes_converter.ts  sorted-events.ts
src/process/verbs/filtering/: filter-events.verb.test.ts  filter-events.verb.ts  filter-traces-with-activity.verb.test.ts  filter-traces-with-activity.verb.ts  filter-traces.verb.test.ts  filter-traces.verb.ts
src/process/verbs/process-mining/: activity-stats.verb.test.ts  activity-stats.verb.ts  dfg.verb.test.ts  dfg.verb.ts  start-end-activities.verb.test.ts  start-end-activities.verb.ts  variants.verb.test.ts  variants.verb.ts
src/process/verbs/slicing/: slice-events.verb.test.ts  slice-events.verb.ts  slice-traces.verb.test.ts  slice-traces.verb.ts
src/process/verbs/transformation/: map-events.verb.test.ts  map-events.verb.ts  map-traces.verb.test.ts  map-traces.verb.ts  sort-events.verb.test.ts  sort-events.verb.ts
(+1638 files in other folders)
